# maltego-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cli.ts  index.ts  mcp-bin.ts  mcp-server.ts  openclaw.plugin.json  package-lock.json  package.json  pytest.ini  tsconfig.json  tsup.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
scripts/: build_mtz.py  check_entropy.py  demo-basic.ts  python-tool.mjs  reduce_attack_dataset.py  setup_venv.py
src/: config.ts
src/demo/: basic-soc-graph.ts
src/lookups/: asn.ts  dns.ts  timeout.ts  whois.ts
src/server/: errors.ts  paths.ts
src/tools/: add-entity.ts  add-link.ts  asn.ts  build-ioc-graph.ts  create-graph.ts  crtsh.ts  dns.ts  expand-domain.ts  expand-hash.ts  expand-ip.ts  index.ts  load-graph.ts  save-graph.ts  whois.ts
src/types/: openclaw-plugin-sdk.d.ts
tests/integration/: basic-demo.test.ts  build-ioc-graph.test.ts  errors.test.ts  expand.test.ts  round-trip.test.ts
tests/transforms/: conftest.py  test_build_mtz.py  (+13 more)
transforms/: README.md  __init__.py  extensions.py  project.py  pyproject.toml  requirements-dev.txt  requirements.txt
transforms/data/: attack_techniques.json
transforms/discoverable/: AttackTechniquePivot.py  CortexAnalyze.py  MispEventPivot.py  MispEventToIocs.py  TheHiveCaseToObservables.py  TheHiveObservableToCases.py  __init__.py
transforms/shared/: __init__.py  config.py  errors.py  http.py  logging_setup.py  trx.py
transforms/transforms/: __init__.py
(+33 files in other folders)
